# conclave

./: .gitignore  ANTHROPIC.md  CHANGELOG.md  CLAUDE_CODE_ROADMAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/commands/: conclave.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deliberation_strategy.yml  persona_proposal.yml
.github/workflows/: codeql.yml  release.yml  test.yml
benchmarks/: README.md  results.json  run.py
conclave/: __init__.py  agent.py  benchmark.py  benchmark_tasks.py  bus.py  cli.py  cost.py  dry_run.py  org.py  replay.py  router.py  trail_view.py
conclave/backends/: __init__.py  anthropic_direct.py  base.py  managed_agents.py
conclave/certification/: __init__.py  certifier.py  observatory.py  simulator.py  skillset.py
conclave/dashboard/: __init__.py  index.html  server.py
conclave/executors/: __init__.py  deepagents.py  haiku_loop.py
docs/: RELEASE-NOTES-v0.1.0.md  index.html
docs/demo/: conclave_demo.py  index.html
examples/: DEMO_RECORDING.md  claude_code_squad.yml  creative_agency.yml  demo.py  demo.tape  growth_squad.yml  product_squad.yml  render_demo.py  render_gif.py  startup_5.yml
tests/: conftest.py  test_agent.py  test_backends.py  test_bus.py  test_cli.py  test_cost.py  test_dry_run.py  test_integration.py  test_replay.py  test_router.py  test_trail_view.py
