[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conclave-agents"
version = "0.1.0"
description = "A bureau of Claude agents that deliberates, decides, and delivers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Denis Hamon", email = "denis.hamon1@gmail.com" }]
maintainers = [{ name = "Denis Hamon", email = "denis.hamon1@gmail.com" }]
keywords = ["anthropic", "claude", "agents", "multi-agent", "llm", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "respx>=0.20",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "watchfiles>=0.21",
]

[project.scripts]
conclave = "conclave.cli:cli"

[project.urls]
Homepage      = "https://denis-hamon.github.io/conclave/"
Repository    = "https://github.com/Denis-hamon/conclave"
Documentation = "https://github.com/Denis-hamon/conclave#readme"
Issues        = "https://github.com/Denis-hamon/conclave/issues"
Changelog     = "https://github.com/Denis-hamon/conclave/releases"

[tool.hatch.build.targets.wheel]
packages = ["conclave"]

[tool.hatch.build.targets.wheel.force-include]
"conclave/py.typed" = "conclave/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["examples/demo.py", "examples/render_gif.py", "examples/render_demo.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line too long — handled by formatter where it matters
    "UP042", # StrEnum requires Python 3.11 str semantics change — keep explicit (str, Enum)
    "B904",  # exception chaining — cosmetic, not blocking
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "--cov=conclave --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["conclave"]
omit = [
    "conclave/dashboard/*",   # optional extra, not imported by test suite
    "conclave/executors/deepagents.py",  # optional LangChain dependency
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
# Progressive adoption: start permissive, tighten module-by-module over time.
# CI runs mypy as an advisory signal (continue-on-error) until the baseline is
# clean enough to gate merges on.
